trying out overflow:hidden to stop scroll bar from appearing mid-animation on the about page

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
   background-color: #030303;
   font-family: 'Cousine', monospace;
   font-weight: bold;
+  overflow: hidden;
 }
 p {
   color: #26ff58;
